--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "react-sql-editor",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "ace-builds": "^1.4.12",
+    "axios": "^1.4.0",
+    "clsx": "^1.1.1",
+    "react": "^17.0.2",
+    "react-ace": "^9.4.1",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.13.0",
+    "react-scripts": "4.0.3",
+    "sweetalert": "^2.1.2",
+    "uuid": "^8.3.2",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
